<resources>
    <string name="app_name">UAS</string>
    <string name="action_settings" translatable="false">Settings</string>
	
	<!-- textos UAS -->
	<string-array name="uas_ini_lenguajes">
		<item>@string/uas_ini_spinner_idioma</item>
		<item>@string/uas_ini_spinner_espanol</item>
		<item>@string/uas_ini_spinner_ingles</item>
		<item>@string/uas_ini_spinner_portugues</item>
	</string-array>

	<string name="uas_texto_cargando">Cargando</string>
	<string name="uas_bienvenida">¡Bienvenido!</string>
	<string name="uas_ya_actualizando">Ya se está actualizando, espere por favor</string>
	<string name="uas_ab_inicio">Mi Facultad</string>
	<string name="uas_ab_especialidades">Especialidades</string>
	<string name="uas_ab_deslizar_actualizar">Deslice hacia abajo para actualizar</string>
	<string name="uas_nav_inicio">Inicio</string>
	<string name="uas_nav_unidadAcad">Unidad Académica</string>
	<string name="uas_nav_objEd">Objetivos Educativos</string>
	<string name="uas_nav_resEst">Resultados Estudiantiles</string>
	<string name="uas_nav_rubricas">Rúbricas</string>
	<string name="uas_nav_aspectos">Aspectos</string>
	<string name="uas_nav_criterios">Criterios</string>
	<string name="uas_nav_cursos">Cursos</string>
	<string name="uas_nav_mejora">Mejora Contínua</string>
	<string name="uas_nav_resEval">Resultados de Evaluaciones</string>
	<string name="uas_nav_salir">Cerrar Sesión</string>
	<string name="uas_ini_entrar">Iniciar Sesión</string>
	<string name="uas_ini_usuarios">Usuarios</string>
	<string name="uas_ini_dialog_titulo">Usuarios registrados</string>
	<string name="uas_ini_dialog_titulo_confirm_pass">Confirmar Contraseña</string>
	<string name="uas_ini_dialog_confirm_pass">Confirmar Contraseña</string>
	<string name="uas_ini_alert_necesita_internet">La primera vez que se inicie sesión necesitará tener conexión a internet</string>
	<string name="uas_ini_toast_pass_incorrecta">Contraseña Incorrecta</string>
	<string name="uas_ini_hint_usuario">Usuario</string>
	<string name="uas_ini_hint_pass">Contraseña</string>
	<string name="uas_ini_spinner_idioma">Idioma</string>
	<string name="uas_ini_spinner_espanol">Español</string>
	<string name="uas_ini_spinner_ingles">Inglés</string>
	<string name="uas_ini_spinner_portugues">Portugués</string>
	<string name="uas_alert_cerrarSesion_titulo">Cerrar sesión</string>
	<string name="uas_alert_salirUAS_titulo">Cerrar UAS</string>
	<string name="uas_alert_salir_pregunta">¿Desea salir?</string>
	<string name="uas_ini_alert_borrar_info">Borrar Información</string>
	<string name="uas_ini_alert_borrar_info_pregunta">¿Desea borrar su información?</string>
	<string name="uas_alert_si">Si</string>
	<string name="uas_alert_no">No</string>
	<string name="uas_ini_toast_camposNoVacio">Los campos no pueden estar vacíos</string>
	<string name="uas_ini_toast_nombUsuarioSoloNum">El nombre de usuario sólo puede contener números</string>
	<string name="uas_no_internet">No hay conexión a internet</string>
	<string name="uas_info_actualizada">Información actualizada correctamente</string>
	<string name="uas_educ_obj_title">Objetivo Educacional</string>
	<string name="uas_educ_obj_semester">Ciclo</string>
	<string name="uas_home_codigo">Código:</string>
	<string name="uas_home_descripcion">Descripción:</string>
	<string name="uas_home_coordinador">Coordinador:</string>
	<string name="uas_home_criterios">Niveles de Criterio:</string>
	<string name="uas_home_aceptacion">Niveles de Aceptación:</string>
	<string name="uas_home_aceptacion_porc">Porcentaje de Aceptación:</string>
	<string name="uas_cont_improv_sugg_tab">Sugerencias</string>
	<string name="uas_cont_improv_plans_tab">Planes de Mejora</string>
	<string name="uas_aspectos_titulo_resultado">Resultado Estudiantil</string>
	<string name="uas_courses_ver_horarios">Ver Horarios</string>
	<string name="uas_courses_codigo">Código:</string>
	<string name="uas_courses_nivel">Nivel:</string>
	<string name="uas_cursos_nivel_titulo">Nivel</string>
	<string name="uas_improv_plan_usuario">Usuario:</string>
	<string name="uas_improv_plan_creador">Creador:</string>
	<string name="uas_improv_plan_fechai">Fecha Inicio:</string>
	<string name="uas_improv_plan_fechaf">Fecha Fin:</string>
	<string name="uas_improv_plan_descripcion">Descripción:</string>
	<string name="uas_improv_plan_descargar">Descargar</string>
	<string name="uas_improv_plan_actividades">Ver Actividades</string>
	<string name="uas_principal_nada_registrado">No hay nada registrado</string>

	<string name="uas_error_login">El usuario y/o contraseña son inválidos</string>
</resources>
