<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_secciones"
        android:checkableBehavior="single">

        <item
            android:id="@+id/item_navigation_drawer_home"
            android:icon="@drawable/ic_inicio"
            android:title="@string/uas_nav_inicio"
            android:checked="true"/>

        <item
            android:id="@+id/item_navigation_drawer_academicUnit"
            android:icon="@drawable/ic_unidadacad"
            android:title="@string/uas_nav_unidadAcad"/>

        <item
            android:id="@+id/item_navigation_drawer_educationalObjectives"
            android:icon="@drawable/ic_objest"
            android:title="@string/uas_nav_objEd"/>

        <item
            android:id="@+id/item_navigation_drawer_studentsResults"
            android:icon="@drawable/ic_resultest"
            android:title="@string/uas_nav_resEst"/>

        <item
            android:id="@+id/item_navigation_drawer_rubrics"
            android:icon="@drawable/ic_rubrics"
            android:title="@string/uas_nav_rubricas"/>

        <item
            android:id="@+id/item_navigation_drawer_aspects"
            android:icon="@drawable/ic_aspects"
            android:title="@string/uas_nav_aspectos"/>

        <item
            android:id="@+id/item_navigation_drawer_criteria"
            android:icon="@drawable/ic_criteria"
            android:title="@string/uas_nav_criterios"/>

        <item
            android:id="@+id/item_navigation_drawer_courses"
            android:icon="@drawable/ic_courses"
            android:title="@string/uas_nav_cursos"/>

    </group>

    <group android:id="@+id/nav_group_info"
        android:checkableBehavior="single">

        <item
            android:id="@+id/item_navigation_drawer_cerrarSesion"
            android:title="@string/uas_nav_salir"
            android:icon="@android:drawable/ic_dialog_alert"/>

    </group>

</menu>