<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_components_list"
    android:orientation="vertical"
    android:padding="@dimen/general_bg_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.35"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_bg_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uas_improv_plan_usuario"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/uas_azul"
                android:typeface="monospace"
                android:textStyle="bold" />

            <TextView android:id="@+id/item_improv_plan_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Usuario"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/uas_azul"
                android:typeface="monospace"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.35"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_bg_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uas_improv_plan_creador"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/uas_azul"
                android:typeface="monospace"
                android:textStyle="bold" />

            <TextView android:id="@+id/item_improv_plan_creador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Creador"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/uas_azul"
                android:typeface="monospace"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.35"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_bg_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uas_improv_plan_fechai"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/uas_azul"
                android:typeface="monospace"
                android:textStyle="bold" />

            <TextView android:id="@+id/item_improv_plan_fechai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Usuario"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/uas_azul"
                android:typeface="monospace"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.35"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_bg_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uas_improv_plan_fechaf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/uas_azul"
                android:typeface="monospace"
                android:textStyle="bold" />

            <TextView android:id="@+id/item_improv_plan_fechaf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Creador"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/uas_azul"
                android:typeface="monospace"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/general_bg_padding">

        <TextView android:id="@+id/item_improv_plan_descripcion_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uas_improv_plan_descripcion"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/uas_azul"
            android:typeface="monospace"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/general_bg_padding">

        <TextView android:id="@+id/item_improv_plan_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descripción"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/uas_azul"
            android:typeface="monospace"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/general_bg_padding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">

            <Button android:id="@+id/item_improv_plan_boton_descargar"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/uas_improv_plan_descargar"
                android:textColor="@color/black"
                android:typeface="monospace"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:background="@drawable/bg_button_login_selector"
                android:textAllCaps="false"
                android:padding="10dp"
                android:layout_centerInParent="true"/>

            <Button android:id="@+id/item_improv_plan_boton_actividades"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/uas_improv_plan_actividades"
                android:textColor="@color/black"
                android:typeface="monospace"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:background="@drawable/bg_button_login_selector"
                android:textAllCaps="false"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_centerInParent="true"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>