<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uas_plomo_fondo"
    android:orientation="vertical"
    android:padding="@dimen/general_bg_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/uas_plomo"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/general_bg_padding">

            <TextView
                android:id="@+id/home_specialty_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ingeniería"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/uas_azul"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="@dimen/general_bg_padding">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uas_home_codigo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/uas_azul"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/home_specialty_code"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Ingeniería"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/uas_azul" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_bg_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uas_home_descripcion"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/uas_azul"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/home_specialty_description"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Ingeniería"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/uas_azul" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_bg_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uas_home_coordinador"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/uas_azul"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/home_specialty_coordinator"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Ingeniería"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/uas_azul" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_bg_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uas_home_criterios"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/uas_azul"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/home_specialty_criteria"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Ingeniería"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/uas_azul" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_bg_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uas_home_aceptacion"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/uas_azul"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/home_specialty_aceptation"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Ingeniería"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/uas_azul" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_bg_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uas_home_aceptacion_porc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/uas_azul"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/home_specialty_aceptation_perc"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Ingeniería"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/uas_azul" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>