<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_components_list"
    android:orientation="vertical"
    android:padding="@dimen/general_bg_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/uas_plomo"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Curso"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/uas_azul"
                android:textStyle="bold"
                android:typeface="monospace" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uas_courses_codigo"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/uas_azul"
                        android:textStyle="bold"
                        android:typeface="monospace" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/uas_courses_nivel"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/uas_azul"
                        android:textStyle="bold"
                        android:typeface="monospace" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/item_course_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="INF"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/uas_azul"
                        android:typeface="monospace" />

                    <TextView
                        android:id="@+id/item_course_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="8000"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/uas_azul"
                        android:typeface="monospace" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp">

                    <Button android:id="@+id/item_course_button_schedules"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uas_courses_ver_horarios"
                        android:textColor="@color/black"
                        android:typeface="monospace"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:background="@drawable/bg_button_login_selector"
                        android:textAllCaps="false"
                        android:padding="@dimen/general_bg_padding"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>